force-app/main/default/objects/cuda_signnow__CN_TemplateSetting__c/cuda_signnow__CN_TemplateSetting__c.object-meta.xml
<CustomObject>
    <label>TemplateSetting</label>
    <nameField>
        <label>TemplateSetting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TemplateSettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>