force-app/main/default/objects/cuda_signnow__CN_TemplateSetting__c/fields/cuda_signnow__Annotation_Config__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__Annotation_Config__c</fullName>
    <description>allows you to configure the annotations with custom font and font size.</description>
    <inlineHelpText>&quot;annotation_config&quot;:{
      &quot;line_height&quot;: 30,
      &quot;size&quot;: 25
 }</inlineHelpText>
    <label>Annotation Config</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>