force-app/main/default/objects/cuda_signnow__CN_TemplateSetting__c/fields/cuda_signnow__Automatically_Send__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__Automatically_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatically Send</label>
    <type>Checkbox</type>
</CustomField>