force-app/main/default/objects/cuda_signnow__CN_TemplateSetting__c/fields/cuda_signnow__Body__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__Body__c</fullName>
    <label>Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>