force-app/main/default/objects/cuda_signnow__CN_TemplateSetting__c/fields/cuda_signnow__Hide_Adv_Set__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__Hide_Adv_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <description>&quot;Advanced Settings&quot; block  will be hidden on &quot;Send Invite&quot; page</description>
    <label>Hide Advanced Settings</label>
    <type>Checkbox</type>
</CustomField>