force-app/main/default/objects/cuda_signnow__CN_TemplateSetting__c/fields/cuda_signnow__Master_Object__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__Master_Object__c</fullName>
    <label>Master Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>