force-app/main/default/objects/cuda_signnow__CN_TemplateSetting__c/fields/cuda_signnow__Roles__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__Roles__c</fullName>
    <description>allow you to customize the roles for the invite.</description>
    <inlineHelpText>[{&quot;order&quot;:&quot;1&quot;, &quot;name&quot;:&quot;Signer&quot;, &quot;email&quot;:&quot;{Contact.Email}&quot;, &quot;allow_forwarding&quot;:&quot;yes&quot;}]</inlineHelpText>
    <label>Roles</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>