force-app/main/default/objects/cuda_signnow__CN_TemplateSetting__c/fields/cuda_signnow__Skip_to_End__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__Skip_to_End__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip to End</label>
    <type>Checkbox</type>
</CustomField>