force-app/main/default/objects/cuda_signnow__CN_TemplateSetting__c/fields/cuda_signnow__subject__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__subject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>