force-app/main/default/objects/cuda_signnow__CN_TemplateSetting__c/fields/cuda_signnow__Trigger_Field__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__Trigger_Field__c</fullName>
    <label>Trigger Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>