force-app/main/default/objects/cuda_signnow__CN_TemplateSetting__c/listViews/cuda_signnow__All.listView-meta.xml
<ListView>
    <fullName>cuda_signnow__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>